--- a/src/Data/projectMeshData.json
+++ b/src/Data/projectMeshData.json
@@ -3,24 +3,24 @@
         "texture":"./images/tv_images/PetExpo.webp",
         "title":"Pet Expo",
         "textColor":"#060606",
-        "bgColor":"#E2E2E2"
+        "bgColor":"white"
     },
     {
         "texture":"./images/tv_images/Northpole-1.png",
         "title":"The North Pole",
         "textColor":"#4F5B9C",
-        "bgColor":"#E2E2E2"
+        "bgColor":"white"
     },
     {
         "texture":"./images/tv_images/PathFusion.webp",
         "title":"Path Fusion",
-        "textColor":"#C00111",
-        "bgColor":"#01121C"
+        "textColor":"black",
+        "bgColor":"white"
     },
     {
         "texture":"./images/tv_images/TreasureMaze.webp",
         "title":"Treazure Maze",
         "textColor":"#C00111",
-        "bgColor":"#E2E2E2"
+        "bgColor":"white"
     }
 ]
